--- a/styles/style.css
+++ b/styles/style.css
@@ -82,11 +82,14 @@ ul {
 }
 /* fim do cabecalho */
 
+section{
+    padding:0 85px;
+}
+
 .interface{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding:0 85px;
 }
 
 .text-container-main{
@@ -123,7 +126,7 @@ ul {
     outline: none;
     border-radius: 40px;
     cursor: pointer;
-    box-shadow: 1px 1px 10px 2px #00000050;
+    box-shadow: 0px 1px 6px 2px #00000050;
     transition: transform ease-in-out  .4s;
 }
 
@@ -150,4 +153,24 @@ ul {
     border-top-left-radius: 300px;
     border-bottom-left-radius: 300px;
     z-index:-10;
+}
+
+.cards-container{
+    display: flex;
+    gap:20px;
+}
+
+.card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
+    background: #DDF2BD;
+    padding:15px 25px;
+    border-radius: 35px;
+}
+
+.img-card{
+    width: 130px;
+    margin: 10px 0;
 }
