--- a/styles/style.css
+++ b/styles/style.css
@@ -59,8 +59,12 @@ ul {
     position: relative;
 }
 
+.header-links .navbar-link.active{
+    color:var(--cor-principal)
+}
+
 .header-links .navbar-link:hover {
-    font-weight: 900;
+    color: var(--cor-principal);
 }
 
 .header-links>li,
@@ -80,70 +84,75 @@ ul {
     transform: scale(1.07);
     color: var(--cor-fonte);
 }
+
 /* fim do cabecalho */
 
-section{
-    padding:0 85px;
+section {
+    padding: 15px 85px;
 }
 
-.interface{
+.interface {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.text-container-main{
+.text-container-main {
     width: 50%;
     display: flex;
     flex-direction: column;
     gap: 2rem;
 }
 
-.title-main{
+.title-main {
     font-size: 4rem;
-    color:var(--cor-fonte);
+    color: var(--cor-fonte);
     font-weight: 400;
 }
 
-.special-mark{
-    color:#000;
+.special-mark {
+    color: #000;
     font-weight: bolder;
 }
 
-.text{
+.special-mark-color {
+    color: #D95032;
+}
+
+.text {
     font-size: 1.4rem;
-    color:var(--cor-fonte);
+    color: var(--cor-fonte);
     line-height: 35px;
 }
 
-.button{
+.button {
     font-size: 1.2rem;
     font-weight: 100;
-    color:#fff;
+    color: #fff;
     background-color: var(--cor-background-button);
     padding: 8px 30px;
-    border:0;
+    border: 0;
     outline: none;
     border-radius: 40px;
     cursor: pointer;
-    box-shadow: 0px 1px 6px 2px #00000050;
-    transition: transform ease-in-out  .4s;
+    box-shadow: 2px 2px 10px 1px #00000039;
+    transition: transform ease-in-out .4s;
 }
 
-.button:hover{
+.button:hover {
     transform: scale(1.1);
 }
 
-.container-img{
+.container-img {
     position: relative;
 }
 
-.img-main{
+.img-main {
     width: 630px;
     filter: drop-shadow(2px 12px 10px rgba(0, 0, 0, 0.219));
 }
 
-.circle-effect{
+.circle-effect {
     position: absolute;
     bottom: -15%;
     right: -40%;
@@ -152,40 +161,46 @@ section{
     background-color: var(--cor-principal);
     border-top-left-radius: 300px;
     border-bottom-left-radius: 300px;
-    z-index:-10;
+    z-index: -10;
 }
 
-.cards-container{
+.cards-container {
     display: flex;
-    gap:20px;
+    gap: 20px;
 }
 
-.card{
+.card {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 40px;
-    padding:15px 25px;
+    padding: 15px 25px;
     border-radius: 35px;
+    box-shadow: 1px 1px 10px #00000012;
+    transition: transform ease .4s;
 }
 
-.card.green{
+.card:hover {
+    transform: scale(1.08);
+}
+
+.card.green {
     background: #DDF2BD;
 }
 
-.card.rose{
+.card.rose {
     background: #FDE1EE;
 }
 
-.card.pink{
+.card.pink {
     background: #FEE6CC;
 }
 
-.card.yellow{
+.card.yellow {
     background: #FAFDCE;
 }
 
-.img-card{
+.img-card {
     width: 130px;
     margin: 10px 0;
 }
